--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
-# Core dependencies used in code under test
 pandas
 numpy
 scikit-learn
+matplotlib
+seaborn
 
-# Testing tools
 pytest
 pytest-cov
