Added packages back

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,12 @@
 pandas
 numpy
-scikit-learn
+scipy
 matplotlib
 seaborn
-
+scikit-learn
+umap-learn
+statsbombpy
+rapidfuzz
 pytest
 pytest-cov
+streamlit
