--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,4 +62,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/football-map:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/football-playstyle-map:latest
