Added project structure, adjusted imports accordingly. Dockerfile unchaaged, ci.yml 1 line.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,8 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        PYTHONPATH=. pytest --cov=src --cov-report=xml --cov-report=term-missing
+        PYTHONPATH=. pytest --cov=project_code/src --cov-report=xml --cov-report=term-missing
+        
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
